# logging-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  Logger.cpp  Logger.hpp  README.md  TextUtils.cpp  TextUtils.hpp  install.bash  install.sh  main.cpp  new_api_main.cpp  requirements.sh
examples/: CMakeLists.txt  chained_logging.cpp  logger_handler.cpp  logging_handler.cpp  logging_with_formatters.cpp  logging_with_handlers.cpp  main.cpp  main2.cpp  simple_logging.cpp
include/: Logger.hpp  logging.hpp
include/gabe/logging/: LoggerHandler.hpp  Manager.hpp  SeverityLevel.hpp  logging.hpp
include/gabe/logging/core/: Logger.hpp  Sink.hpp
include/gabe/logging/formatters/: Calendar.hpp  Formatter.hpp  MultiFormatter.hpp  Severity.hpp  Time.hpp
include/gabe/logging/handlers/: ConsoleStdOutHandler.hpp  Handler.hpp  SizeRotatingFileHandler.hpp  TimeRotatingFileHandler.hpp
src/: Logger.cpp  logging.cpp
src/gabe/logging/: LoggerHandler.cpp  Manager.cpp  logging.cpp
src/gabe/logging/core/: Logger.cpp  Sink.cpp
src/gabe/logging/formatters/: Calendar.cpp  Formatter.cpp  MultiFormatter.cpp  Severity.cpp  Time.cpp
src/gabe/logging/handlers/: ConsoleStdOutHandler.cpp  Handler.cpp  SizeRotatingFileHandler.cpp  TimeRotatingFileHandler.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  Sink.cpp
tests/formatters/: CMakeLists.txt  CalendarFormatter.cpp  Formatter.cpp  MultiFormatter.cpp  TimeFormatter.cpp
tests/handlers/: CMakeLists.txt  ConsoleStdOutHandler.cpp  Handler.cpp  SizeRotatingFileHandler.cpp
